crates/backyard-parser/tests/snapshots/whiles__basic.snap
---
source: crates/backyard-parser/tests/whiles.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: while
    condition:
      node_type: bin
      left:
        node_type: variable
        name:
          node_type: identifier
          name:
            - 105
          loc:
            start:
              line: 1
              column: 7
              offset: 7
            end:
              line: 1
              column: 8
              offset: 8
          leadings: ~
          trailings: ~
        loc:
          start:
            line: 1
            column: 7
            offset: 7
          end:
            line: 1
            column: 8
            offset: 8
        leadings: ~
        trailings: ~
      operator: IsLesserOrEqual
      right:
        node_type: number
        value:
          - 49
          - 48
        loc:
          start:
            line: 1
            column: 13
            offset: 13
          end:
            line: 1
            column: 13
            offset: 13
        leadings: ~
        trailings: ~
      loc:
        start:
          line: 1
          column: 10
          offset: 10
        end:
          line: 1
          column: 13
          offset: 13
      leadings: ~
      trailings: ~
    body:
      node_type: block
      statements: []
      loc:
        start:
          line: 1
          column: 17
          offset: 17
        end:
          line: 1
          column: 18
          offset: 18
      leadings: ~
      trailings: ~
    is_short: false
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 18
        offset: 18
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 19
    offset: 19
leadings: ~
trailings: ~
