crates/backyard-parser/tests/snapshots/whiles__no_block.snap
---
source: crates/backyard-parser/tests/whiles.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: while
    condition:
      node_type: boolean
      is_true: true
      loc:
        start:
          line: 1
          column: 7
          offset: 7
        end:
          line: 1
          column: 7
          offset: 7
      leadings: ~
      trailings: ~
    body:
      node_type: assignment
      left:
        node_type: variable
        name:
          node_type: identifier
          name: a
          loc:
            start:
              line: 1
              column: 13
              offset: 13
            end:
              line: 1
              column: 14
              offset: 14
          leadings: ~
          trailings: ~
        loc:
          start:
            line: 1
            column: 13
            offset: 13
          end:
            line: 1
            column: 14
            offset: 14
        leadings: ~
        trailings: ~
      operator: "="
      right:
        node_type: number
        value: "4"
        loc:
          start:
            line: 1
            column: 18
            offset: 18
          end:
            line: 1
            column: 18
            offset: 18
        leadings: ~
        trailings: ~
      loc:
        start:
          line: 1
          column: 16
          offset: 16
        end:
          line: 1
          column: 18
          offset: 18
      leadings: ~
      trailings: ~
    is_short: false
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 19
        offset: 19
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 19
    offset: 19
leadings: ~
trailings: ~
