crates/backyard-parser/tests/snapshots/whiles__with_key.snap
---
source: crates/backyard-parser/tests/whiles.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: while
    condition:
      node_type: boolean
      is_true: true
      loc:
        start:
          line: 1
          column: 7
          offset: 7
        end:
          line: 1
          column: 7
          offset: 7
      leadings: []
      trailings: []
    body:
      node_type: block
      statements: []
      loc:
        start:
          line: 1
          column: 12
          offset: 12
        end:
          line: 1
          column: 14
          offset: 14
      leadings: []
      trailings: []
    is_short: true
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 14
        offset: 14
    leadings: []
    trailings: []
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 22
    offset: 22
leadings: []
trailings: []
